test/files/neg/t7292-deprecation.scala
object OctalEscapes {
  val chr1 = '\0'
  val str1 = "abc\123456"
  val lf = '\012'
}
