test/files/neg/t7292-deprecation.check
t7292-deprecation.scala:2: warning: Octal escape literals are deprecated, use \u0000 instead.
  val chr1 = '\0'
              ^
t7292-deprecation.scala:3: warning: Octal escape literals are deprecated, use \u0053 instead.
  val str1 = "abc\123456"
                 ^
t7292-deprecation.scala:4: warning: Octal escape literals are deprecated, use \n instead.
  val lf = '\012'
            ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
